# chessAI

./: .gitignore  CMakeLists.txt  readme.md
res/: boardFragment.glsl  boardVertex.glsl  highlightFragment.glsl  highlightVertex.glsl  pieceFragment.glsl  pieceVertex.glsl
src/: ai.cpp  ai.h  board.cpp  board.h  chessMove.cpp  chessMove.h  loadShader.cpp  loadShader.h  main.cpp  piece.cpp  piece.h  sourceDir.h  texture.cpp
web/: main.data  main.js  main.wasm
